--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-BR" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -25,6 +25,11 @@
                 <li><a href="#home">Início</a></li>
                 <li><a href="#projetos">Projetos</a></li>
                 <li><a href="#cadastro">Cadastro</a></li>
+                <li>
+                    <button id="theme-toggle" aria-label="Alternar tema escuro" class="theme-toggle">
+                        🌙
+                    </button>
+                </li>
             </ul>
         </nav>
     </header>
